best-practices/add-networkpolicy-dns/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-networkpolicy-dns
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
