best-practices/add-networkpolicy-dns/.chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: add-networkpolicy-dns
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: old-resource.yaml
  - name: step-02
    try:
    - apply:
        file: ../add-networkpolicy-dns.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-03
    try:
    - apply:
        file: resource.yaml
  - name: step-04
    try:
    - assert:
        file: generatedResource.yaml
    - error:
        file: notGeneratedResource.yaml
